[package]
name = "extern_executor"
version = "0.1.3"
description = "Async executor which delegates futures polling to external event-loop."
keywords = ["async", "future", "executor"]
categories = ["asynchronous", "no-std"]
authors = ["K. <kayo@illumium.org>"]
license = "MIT"
repository = "https://github.com/katyo/extern_executor"
readme = "README.md"
edition = "2021"

[workspace]
members = [
  "example_lib",
]

[dependencies.futures-task]
version = "0.3"
default-features = false
features = ["alloc"]
optional = true

[dependencies.spin]
version = "0.9"
optional = true

[dependencies.woke]
version = "0.0"
optional = true

[build-dependencies.pkg-config]
version = "0.3"
optional = true

[dependencies.dart-sys]
version = "4"
optional = true

[build-dependencies.cbindgen]
version = "0.24"
optional = true

[features]
default = ["std"]
std = ["futures-task"]
no_std = ["spin", "woke"]
uv = ["driver", "pkg-config"]
dart = ["dart-sys", "driver"]
driver = []

[profile.release]
opt-level = "s"
debug = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = false
