[package]
name = "example_lib"
version = "0.1.3"
description = "Example library to demonstrate external async executor usage."
authors = ["K. <kayo@illumium.org>"]
edition = "2018"
publish = false

[lib]
crate_type = ["staticlib", "cdylib"]

[dependencies]
futures = "^0.3"

[dependencies.futures-timer]
version = "^3.0"
optional = true

[dependencies.async-std]
version = "^1.5"
optional = true

[dependencies.async-std-resolver]
version = "^0.19"
optional = true

[dependencies.extern_executor]
version = "^0.1"
path = "../extern_executor"
features = ["cbindgen"]

[build-dependencies]
cbindgen = "^0.14"

[features]
default = ["delay", "read-file", "ns-lookup"]

uv = ["extern_executor/uv"]
dart = ["extern_executor/dart"]

delay = ["futures-timer"]
read-file = ["async-std"]
ns-lookup = ["async-std", "async-std-resolver"]
