[package]
name = "example_lib"
version = "0.1.3"
description = "Example library to demonstrate external async executor usage."
authors = ["K. <kayo@illumium.org>"]
edition = "2021"
publish = false

[lib]
crate_type = ["staticlib", "cdylib"]

[dependencies]
futures = "0.3"

[dependencies.futures-timer]
version = "3"
optional = true

[dependencies.async-std]
version = "1"
optional = true

[dependencies.async-std-resolver]
version = "0.22"
optional = true

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread"]
optional = true

[dependencies.extern_executor]
version = "0.1"
path = ".."
features = ["cbindgen"]

[build-dependencies]
cbindgen = "0.24"

[features]
default = ["futures-delay", "async-std-read-file", "async-std-ns-lookup"]
#default = ["futures-default"]
#default = ["async-std-default"]
#default = ["tokio-default"]

futures-default = ["futures-delay"]
async-std-default = ["async-std-delay", "async-std-read-file", "async-std-ns-lookup"]
tokio-default = ["tokio-delay", "tokio-read-file", "tokio-ns-lookup"]

uv = ["extern_executor/uv"]
dart = ["extern_executor/dart"]

delay = []
read-file = []
ns-lookup = []

futures-delay = ["futures-timer", "delay"]

async-std-delay = ["async-std", "delay"]
async-std-read-file = ["async-std", "read-file"]
async-std-ns-lookup = ["async-std", "async-std-resolver", "ns-lookup"]

tokio-delay = ["tokio", "tokio/time", "delay"]
tokio-read-file = ["tokio", "tokio/io-util", "tokio/fs", "read-file"]
tokio-ns-lookup = ["tokio", "tokio/net", "ns-lookup"]
