[package]
name = "extern_executor"
version = "0.1.0"
description = "Async executor which delegates futures polling to external event-loop."
keywords = ["async", "future", "executor"]
categories = ["asynchronous", "no-std"]
authors = ["K. <kayo@illumium.org>"]
license = "MIT"
repository = "https://github.com/katyo/extern_executor"
readme = "README.md"
edition = "2018"

[badges.travis-ci]
repository = "katyo/extern_executor"

[badges.is-it-maintained-issue-resolution]
repository = "katyo/extern_executor"

[badges.is-it-maintained-open-issues]
repository = "katyo/extern_executor"

[dependencies.futures-task]
version = "^0.3"
default-features = false
features = ["alloc"]
optional = true

[dependencies.spin]
version = "^0.5"
optional = true

[dependencies.woke]
version = "^0.0"
optional = true

[dependencies.dart-sys]
version = "^2.0"
optional = true

[build-dependencies.cbindgen]
version = "^0.14"
optional = true

[features]
default = ["std"]
std = ["futures-task"]
no_std = ["spin", "woke"]
uv = ["driver"]
dart = ["dart-sys", "driver"]
driver = []
